Update Vuejs logic and infomation 19/10

--- a/cach-thuc-mua-hang.html
+++ b/cach-thuc-mua-hang.html
@@ -142,10 +142,8 @@
                             </div>
                             <div class="card-body py-2">
                                 <div class="small text-muted">
-                                    <p class="mb-2">45-47 CMT8, Phường Bến Thành, Quận 1, TP. Hồ Chí Minh</p>
-                                    <p class="mb-2">420/6 Lê Văn Sỹ, Phường 14, Quận 3, TP. Hồ Chí Minh</p>
-                                    <p class="mb-2">252 Nguyễn Thị Thập, Phường Tân Quy, Quận 7, TP. Hồ Chí Minh</p>
-                                    <p class="mb-0">8 Nguyễn Gia Trí, Phường 25, Quận Bình Thạnh, TP. Hồ Chí Minh</p>
+                                    <p class="mb-2">Trụ sở chính: 224/60 đường Dương Đình Hội, Phường Tăng Nhơn Phú, TP.
+                                        Hồ Chí Minh</p>
                                 </div>
                             </div>
                         </div>
@@ -186,8 +184,8 @@
                                 <div class="text-white">
                                     <h6 class="fw-bold mb-3">Nơi mùi hương làm bạn đồng hành</h6>
                                     <p class="small mb-3">GỌI ĐẶT MUA:</p>
-                                    <a href="tel:19000129" class="btn btn-light btn-sm">
-                                        <i class="fas fa-phone me-1"></i>1900 0129
+                                    <a href="tel:0965765346" class="btn btn-light btn-sm">
+                                        <i class="fas fa-phone me-1"></i>0965 765 346
                                     </a>
                                     <p class="small mt-2 mb-0">(9:00 - 21:00)</p>
                                 </div>
@@ -338,7 +336,7 @@
                                         <ul class="list-unstyled">
                                             <li class="mb-2">
                                                 <i class="fas fa-check text-success me-2"></i>
-                                                Gọi hotline: <strong class="text-primary">1900 0129</strong>
+                                                Gọi hotline: <strong class="text-primary">0965 765 346</strong>
                                             </li>
                                             <li class="mb-2">
                                                 <i class="fas fa-check text-success me-2"></i>
@@ -429,82 +427,19 @@
                         </div>
                         <div class="card-body">
                             <div class="row">
-                                <div class="col-md-6 mb-3">
+                                <div class="col-md-12 mb-3">
                                     <div class="card border-0 bg-light h-100">
                                         <div class="card-body">
                                             <h6 class="fw-bold text-primary mb-2">
-                                                <i class="fas fa-map-pin me-2"></i>Cơ sở 1 - Quận 1
+                                                <i class="fas fa-map-pin me-2"></i> Trụ sở chính
                                             </h6>
                                             <p class="mb-2">
                                                 <i class="fas fa-location-dot me-2 text-muted"></i>
-                                                45-47 CMT8, Phường Bến Thành, Quận 1, TP. Hồ Chí Minh
+                                                224/60 đường Dương Đình Hội, Phường Tăng Nhơn Phú, TP. Hồ Chí Minh
                                             </p>
                                             <p class="mb-2">
                                                 <i class="fas fa-phone me-2 text-muted"></i>
                                                 <a href="tel:02838291234" class="text-decoration-none">028 3829 1234</a>
-                                            </p>
-                                            <p class="mb-0">
-                                                <i class="fas fa-clock me-2 text-muted"></i>
-                                                9:00 - 21:00 (Hàng ngày)
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-6 mb-3">
-                                    <div class="card border-0 bg-light h-100">
-                                        <div class="card-body">
-                                            <h6 class="fw-bold text-primary mb-2">
-                                                <i class="fas fa-map-pin me-2"></i>Cơ sở 2 - Quận 3
-                                            </h6>
-                                            <p class="mb-2">
-                                                <i class="fas fa-location-dot me-2 text-muted"></i>
-                                                420/6 Lê Văn Sỹ, Phường 14, Quận 3, TP. Hồ Chí Minh
-                                            </p>
-                                            <p class="mb-2">
-                                                <i class="fas fa-phone me-2 text-muted"></i>
-                                                <a href="tel:02839876543" class="text-decoration-none">028 3987 6543</a>
-                                            </p>
-                                            <p class="mb-0">
-                                                <i class="fas fa-clock me-2 text-muted"></i>
-                                                9:00 - 21:00 (Hàng ngày)
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-6 mb-3">
-                                    <div class="card border-0 bg-light h-100">
-                                        <div class="card-body">
-                                            <h6 class="fw-bold text-primary mb-2">
-                                                <i class="fas fa-map-pin me-2"></i>Cơ sở 3 - Quận 7
-                                            </h6>
-                                            <p class="mb-2">
-                                                <i class="fas fa-location-dot me-2 text-muted"></i>
-                                                252 Nguyễn Thị Thập, Phường Tân Quy, Quận 7, TP. Hồ Chí Minh
-                                            </p>
-                                            <p class="mb-2">
-                                                <i class="fas fa-phone me-2 text-muted"></i>
-                                                <a href="tel:02876543210" class="text-decoration-none">028 7654 3210</a>
-                                            </p>
-                                            <p class="mb-0">
-                                                <i class="fas fa-clock me-2 text-muted"></i>
-                                                9:00 - 21:00 (Hàng ngày)
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-6 mb-3">
-                                    <div class="card border-0 bg-light h-100">
-                                        <div class="card-body">
-                                            <h6 class="fw-bold text-primary mb-2">
-                                                <i class="fas fa-map-pin me-2"></i>Cơ sở 4 - Bình Thạnh
-                                            </h6>
-                                            <p class="mb-2">
-                                                <i class="fas fa-location-dot me-2 text-muted"></i>
-                                                8 Nguyễn Gia Trí, Phường 25, Quận Bình Thạnh, TP. Hồ Chí Minh
-                                            </p>
-                                            <p class="mb-2">
-                                                <i class="fas fa-phone me-2 text-muted"></i>
-                                                <a href="tel:02812345678" class="text-decoration-none">028 1234 5678</a>
                                             </p>
                                             <p class="mb-0">
                                                 <i class="fas fa-clock me-2 text-muted"></i>
@@ -525,8 +460,8 @@
                             <p class="mb-4">Liên hệ với chúng tôi để được tư vấn miễn phí về dịch vụ phù hợp nhất cho
                                 bạn</p>
                             <div class="d-flex flex-column flex-md-row gap-3 justify-content-center">
-                                <a href="tel:19000129" class="btn btn-light btn-lg px-4">
-                                    <i class="fas fa-phone me-2"></i>Gọi Ngay: 1900 0129
+                                <a href="tel:0965765346" class="btn btn-light btn-lg px-4">
+                                    <i class="fas fa-phone me-2"></i>Gọi Ngay: 0965 765 346
                                 </a>
                                 <a href="#newsletter-section" class="btn btn-outline-light btn-lg px-4">
                                     <i class="fas fa-calendar-check me-2"></i>Đăng Ký Online
@@ -652,12 +587,13 @@
                 <div class="col-lg-3 col-md-6 mb-4">
                     <h6 class="fw-bold mb-3">Thông tin liên hệ</h6>
                     <div class="small">
-                        <p class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> 224/60 đường Dương Đình Hội, Phường
+                        <p class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> Trụ sở chính: 224/60 đường Dương Đình
+                            Hội, Phường
                             Tăng Nhơn Phú, TP. Hồ Chí Minh</p>
                         <p class="mb-2"><i class="fas fa-phone me-2"></i> <a href="tel:0965765346"
                                 class="text-decoration-none text-dark">0965765346</a></p>
-                        <p class="mb-2"><i class="fas fa-envelope me-2"></i> <a href="mailto:contact@irisbeauty.vn"
-                                class="text-decoration-none text-dark">contact@irisbeauty.vn</a></p>
+                        <p class="mb-2"><i class="fas fa-envelope me-2"></i> <a href="mailto:irisle.beauty@gmail.com"
+                                class="text-decoration-none text-dark">irisle.beauty@gmail.com</a></p>
                         <p class="mb-0"><i class="fas fa-clock me-2"></i> Mở cửa: 9:00 - 21:00 (Thứ 2 - CN)</p>
                     </div>
                 </div>
@@ -724,7 +660,7 @@
     <!-- Floating Contact Buttons -->
     <div class="floating-contacts">
         <!-- Phone Button -->
-        <a href="tel:0388178062" class="floating-btn phone-btn" title="Gọi ngay: 0388178062">
+        <a href="tel:0965765346" class="floating-btn phone-btn" title="Gọi ngay: 0965765346">
             <i class="fas fa-phone"></i>
         </a>
         <!-- Facebook Button -->
