--- a/checkout.html
+++ b/checkout.html
@@ -348,10 +348,11 @@
                         chuyên nghiệp.</p>
                     <p class="small">
                         <i class="fas fa-id-card me-2"></i> <strong>Mã số ĐKKD:</strong> 068197003989<br>
-                        <i class="fas fa-map-marker-alt me-2"></i> <strong>Địa chỉ:</strong> 224/60 đường Dương Đình
+                        <i class="fas fa-map-marker-alt me-2"></i> <strong>Địa chỉ:</strong> Trụ sở chính: 224/60 đường
+                        Dương Đình
                         Hội, Phường Tăng Nhơn Phú, TP. Hồ Chí Minh<br>
                         <i class="fas fa-phone me-2"></i> <strong>Điện thoại:</strong> 0965765346<br>
-                        <i class="fas fa-envelope me-2"></i> <strong>Email:</strong> contact@irisbeauty.vn<br>
+                        <i class="fas fa-envelope me-2"></i> <strong>Email:</strong> irisle.beauty@gmail.com<br>
                         <i class="fas fa-clock me-2"></i> <strong>Giờ làm việc:</strong> 8:30 - 19:30 hằng ngày
                     </p>
                     <div class="social-links mt-3">
