--- a/chinh-sach-bao-mat.html
+++ b/chinh-sach-bao-mat.html
@@ -143,10 +143,8 @@
                             </div>
                             <div class="card-body py-2">
                                 <div class="small text-muted">
-                                    <p class="mb-2">45-47 CMT8, Phường Bến Thành, Quận 1, TP. Hồ Chí Minh</p>
-                                    <p class="mb-2">420/6 Lê Văn Sỹ, Phường 14, Quận 3, TP. Hồ Chí Minh</p>
-                                    <p class="mb-2">252 Nguyễn Thị Thập, Phường Tân Quy, Quận 7, TP. Hồ Chí Minh</p>
-                                    <p class="mb-0">8 Nguyễn Gia Trí, Phường 25, Quận Bình Thạnh, TP. Hồ Chí Minh</p>
+                                    <p class="mb-2">Trụ sở chính: 224/60 đường Dương Đình Hội, Phường Tăng Nhơn Phú, TP.
+                                        Hồ Chí Minh</p>
                                 </div>
                             </div>
                         </div>
@@ -187,8 +185,8 @@
                                 <div class="text-white">
                                     <h6 class="fw-bold mb-3">Nơi mùi hương làm bạn đồng hành</h6>
                                     <p class="small mb-3">GỌI ĐẶT MUA:</p>
-                                    <a href="tel:19000129" class="btn btn-light btn-sm">
-                                        <i class="fas fa-phone me-1"></i>1900 0129
+                                    <a href="tel:0965765346" class="btn btn-light btn-sm">
+                                        <i class="fas fa-phone me-1"></i>0965 765 346
                                     </a>
                                     <p class="small mt-2 mb-0">(9:00 - 21:00)</p>
                                 </div>
@@ -540,12 +538,12 @@
                                 <div class="text-center">
                                     <div class="row">
                                         <div class="col-md-6 mb-3">
-                                            <a href="tel:19000129" class="btn btn-primary btn-lg w-100">
-                                                <i class="fas fa-phone me-2"></i>Hotline: 1900 0129
+                                            <a href="tel:0965765346" class="btn btn-primary btn-lg w-100">
+                                                <i class="fas fa-phone me-2"></i>Hotline: 0965 765 346
                                             </a>
                                         </div>
                                         <div class="col-md-6 mb-3">
-                                            <a href="mailto:support@irisbeauty.vn"
+                                            <a href="mailto:irisle.beauty@gmail.com"
                                                 class="btn btn-outline-primary btn-lg w-100">
                                                 <i class="fas fa-envelope me-2"></i>Email hỗ trợ
                                             </a>
@@ -679,8 +677,8 @@
                                                 <i class="fas fa-phone-alt text-primary mb-2"
                                                     style="font-size: 2rem;"></i>
                                                 <h6 class="fw-bold">Hotline khiếu nại</h6>
-                                                <a href="tel:19000129" class="btn btn-primary btn-sm mb-2">
-                                                    <i class="fas fa-phone me-1"></i>1900 0129
+                                                <a href="tel:0965765346" class="btn btn-primary btn-sm mb-2">
+                                                    <i class="fas fa-phone me-1"></i>0965 765 346
                                                 </a>
                                                 <p class="small text-muted mb-0">Hoạt động 24/7</p>
                                             </div>
@@ -746,12 +744,13 @@
                 <div class="col-lg-3 col-md-6 mb-4">
                     <h6 class="fw-bold mb-3">Thông tin liên hệ</h6>
                     <div class="small">
-                        <p class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> 224/60 đường Dương Đình Hội, Phường
+                        <p class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> Trụ sở chính: 224/60 đường Dương Đình
+                            Hội, Phường
                             Tăng Nhơn Phú, TP. Hồ Chí Minh</p>
                         <p class="mb-2"><i class="fas fa-phone me-2"></i> <a href="tel:0965765346"
                                 class="text-decoration-none text-dark">0965765346</a></p>
-                        <p class="mb-2"><i class="fas fa-envelope me-2"></i> <a href="mailto:contact@irisbeauty.vn"
-                                class="text-decoration-none text-dark">contact@irisbeauty.vn</a></p>
+                        <p class="mb-2"><i class="fas fa-envelope me-2"></i> <a href="mailto:irisle.beauty@gmail.com"
+                                class="text-decoration-none text-dark">irisle.beauty@gmail.com</a></p>
                         <p class="mb-0"><i class="fas fa-clock me-2"></i> Mở cửa: 9:00 - 21:00 (Thứ 2 - CN)</p>
                     </div>
                 </div>
