--- a/phuong-thuc-thanh-toan.html
+++ b/phuong-thuc-thanh-toan.html
@@ -144,10 +144,8 @@
                             </div>
                             <div class="card-body py-2">
                                 <div class="small text-muted">
-                                    <p class="mb-2">45-47 CMT8, Phường Bến Thành, Quận 1, TP. Hồ Chí Minh</p>
-                                    <p class="mb-2">420/6 Lê Văn Sỹ, Phường 14, Quận 3, TP. Hồ Chí Minh</p>
-                                    <p class="mb-2">252 Nguyễn Thị Thập, Phường Tân Quy, Quận 7, TP. Hồ Chí Minh</p>
-                                    <p class="mb-0">8 Nguyễn Gia Trí, Phường 25, Quận Bình Thạnh, TP. Hồ Chí Minh</p>
+                                    <p class="mb-2">Trụ sở chính: 224/60 đường Dương Đình Hội, Phường Tăng Nhơn Phú, TP.
+                                        Hồ Chí Minh</p>
                                 </div>
                             </div>
                         </div>
@@ -188,8 +186,8 @@
                                 <div class="text-white">
                                     <h6 class="fw-bold mb-3">Nơi mùi hương làm bạn đồng hành</h6>
                                     <p class="small mb-3">GỌI ĐẶT MUA:</p>
-                                    <a href="tel:19000129" class="btn btn-light btn-sm">
-                                        <i class="fas fa-phone me-1"></i>1900 0129
+                                    <a href="tel:0965765346" class="btn btn-light btn-sm">
+                                        <i class="fas fa-phone me-1"></i>0965 765 346
                                     </a>
                                     <p class="small mt-2 mb-0">(9:00 - 21:00)</p>
                                 </div>
@@ -436,50 +434,27 @@
                         </div>
                         <div class="collapse" id="bankInfoContent">
                             <div class="card-body">
-                                <div class="row g-4">
-                                    <div class="col-md-6">
-                                        <div class="card border-primary">
-                                            <div class="card-header bg-primary text-white">
-                                                <h6 class="fw-bold mb-0">
-                                                    <i class="fas fa-university me-2"></i>Ngân Hàng Vietcombank
-                                                </h6>
-                                            </div>
-                                            <div class="card-body">
-                                                <div class="row">
-                                                    <div class="col-4"><strong>Số TK:</strong></div>
-                                                    <div class="col-8">0123456789</div>
-                                                </div>
-                                                <div class="row">
-                                                    <div class="col-4"><strong>Chủ TK:</strong></div>
-                                                    <div class="col-8">IRIS BEAUTY SPA</div>
-                                                </div>
-                                                <div class="row">
-                                                    <div class="col-4"><strong>Chi nhánh:</strong></div>
-                                                    <div class="col-8">Bến Thành, TP.HCM</div>
-                                                </div>
+                                <div class="text-center mb-4">
+                                    <h5 class="fw-bold text-primary mb-3">Quét Mã QR Để Thanh Toán</h5>
+                                    <p class="text-muted">Sử dụng ứng dụng ngân hàng để quét mã QR và chuyển khoản</p>
+                                </div>
+
+                                <div class="row g-4 justify-content-center">
+                                    <div class="col-md-6 text-center">
+                                        <div class="card border-0 shadow-sm">
+                                            <div class="card-body p-4">
+                                                <img src="assets/images/ma_qr_1.jpg" alt="QR Code Thanh Toán 1"
+                                                    class="img-fluid rounded mb-3" style="max-width: 300px;">
+                                                <h6 class="fw-bold text-primary">Tài Khoản 1</h6>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
-                                        <div class="card border-success">
-                                            <div class="card-header bg-success text-white">
-                                                <h6 class="fw-bold mb-0">
-                                                    <i class="fas fa-university me-2"></i>Ngân Hàng Techcombank
-                                                </h6>
-                                            </div>
-                                            <div class="card-body">
-                                                <div class="row">
-                                                    <div class="col-4"><strong>Số TK:</strong></div>
-                                                    <div class="col-8">9876543210</div>
-                                                </div>
-                                                <div class="row">
-                                                    <div class="col-4"><strong>Chủ TK:</strong></div>
-                                                    <div class="col-8">IRIS BEAUTY SPA</div>
-                                                </div>
-                                                <div class="row">
-                                                    <div class="col-4"><strong>Chi nhánh:</strong></div>
-                                                    <div class="col-8">Quận 1, TP.HCM</div>
-                                                </div>
+                                    <div class="col-md-6 text-center">
+                                        <div class="card border-0 shadow-sm">
+                                            <div class="card-body p-4">
+                                                <img src="assets/images/ma_qr_2.jpg" alt="QR Code Thanh Toán 2"
+                                                    class="img-fluid rounded mb-3" style="max-width: 300px;">
+                                                <h6 class="fw-bold text-primary">Tài Khoản 2</h6>
                                             </div>
                                         </div>
                                     </div>
@@ -494,12 +469,12 @@
                                 <div class="text-center mt-4">
                                     <div class="row">
                                         <div class="col-md-6 mb-3">
-                                            <a href="tel:19000129" class="btn btn-primary btn-lg w-100">
-                                                <i class="fas fa-phone me-2"></i>Xác nhận thanh toán: 1900 0129
+                                            <a href="tel:0965765346" class="btn btn-primary btn-lg w-100">
+                                                <i class="fas fa-phone me-2"></i>Xác nhận thanh toán: 0965 765 346
                                             </a>
                                         </div>
                                         <div class="col-md-6 mb-3">
-                                            <a href="mailto:order@irisbeauty.vn"
+                                            <a href="mailto:irisle.beauty@gmail.com"
                                                 class="btn btn-outline-primary btn-lg w-100">
                                                 <i class="fas fa-envelope me-2"></i>Email đơn hàng
                                             </a>
@@ -566,8 +541,8 @@
                                                 <i class="fas fa-phone-alt text-danger mb-2"
                                                     style="font-size: 2rem;"></i>
                                                 <h6 class="fw-bold">Hotline hỗ trợ thanh toán</h6>
-                                                <a href="tel:19000129" class="btn btn-danger btn-sm">
-                                                    <i class="fas fa-phone me-1"></i>1900 0129
+                                                <a href="tel:0965765346" class="btn btn-danger btn-sm">
+                                                    <i class="fas fa-phone me-1"></i>0965 765 346
                                                 </a>
                                                 <p class="small text-muted mt-2 mb-0">Hỗ trợ 24/7</p>
                                             </div>
@@ -579,8 +554,8 @@
                                                 <i class="fas fa-envelope text-primary mb-2"
                                                     style="font-size: 2rem;"></i>
                                                 <h6 class="fw-bold">Email hỗ trợ</h6>
-                                                <a href="mailto:payment@irisbeauty.vn" class="btn btn-primary btn-sm">
-                                                    <i class="fas fa-envelope me-1"></i>payment@irisbeauty.vn
+                                                <a href="mailto:irisle.beauty@gmail.com" class="btn btn-primary btn-sm">
+                                                    <i class="fas fa-envelope me-1"></i>irisle.beauty@gmail.com
                                                 </a>
                                                 <p class="small text-muted mt-2 mb-0">Phản hồi trong 2h</p>
                                             </div>
@@ -646,12 +621,13 @@
                 <div class="col-lg-3 col-md-6 mb-4">
                     <h6 class="fw-bold mb-3">Thông tin liên hệ</h6>
                     <div class="small">
-                        <p class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> 224/60 đường Dương Đình Hội, Phường
+                        <p class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> Trụ sở chính: 224/60 đường Dương Đình
+                            Hội, Phường
                             Tăng Nhơn Phú, TP. Hồ Chí Minh</p>
                         <p class="mb-2"><i class="fas fa-phone me-2"></i> <a href="tel:0965765346"
                                 class="text-decoration-none text-dark">0965765346</a></p>
-                        <p class="mb-2"><i class="fas fa-envelope me-2"></i> <a href="mailto:contact@irisbeauty.vn"
-                                class="text-decoration-none text-dark">contact@irisbeauty.vn</a></p>
+                        <p class="mb-2"><i class="fas fa-envelope me-2"></i> <a href="mailto:irisle.beauty@gmail.com"
+                                class="text-decoration-none text-dark">irisle.beauty@gmail.com</a></p>
                         <p class="mb-0"><i class="fas fa-clock me-2"></i> Mở cửa: 9:00 - 21:00 (Thứ 2 - CN)</p>
                     </div>
                 </div>
