--- a/product-detail-nuoc-hoa.html
+++ b/product-detail-nuoc-hoa.html
@@ -792,12 +792,13 @@
                 <div class="col-lg-3 col-md-6 mb-4">
                     <h6 class="fw-bold mb-3">Thông tin liên hệ</h6>
                     <div class="small">
-                        <p class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> 224/60 đường Dương Đình Hội, Phường
+                        <p class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> Trụ sở chính: 224/60 đường Dương Đình
+                            Hội, Phường
                             Tăng Nhơn Phú, TP. Hồ Chí Minh</p>
                         <p class="mb-2"><i class="fas fa-phone me-2"></i> <a href="tel:0965765346"
                                 class="text-decoration-none text-dark">0965765346</a></p>
-                        <p class="mb-2"><i class="fas fa-envelope me-2"></i> <a href="mailto:contact@irisbeauty.vn"
-                                class="text-decoration-none text-dark">contact@irisbeauty.vn</a></p>
+                        <p class="mb-2"><i class="fas fa-envelope me-2"></i> <a href="mailto:irisle.beauty@gmail.com"
+                                class="text-decoration-none text-dark">irisle.beauty@gmail.com</a></p>
                         <p class="mb-0"><i class="fas fa-clock me-2"></i> Mở cửa: 9:00 - 21:00 (Thứ 2 - CN)</p>
                     </div>
                 </div>
