--- a/hoi-dap-ve-hang-hoa.html
+++ b/hoi-dap-ve-hang-hoa.html
@@ -142,10 +142,8 @@
                             </div>
                             <div class="card-body py-2">
                                 <div class="small text-muted">
-                                    <p class="mb-2">45-47 CMT8, Phường Bến Thành, Quận 1, TP. Hồ Chí Minh</p>
-                                    <p class="mb-2">420/6 Lê Văn Sỹ, Phường 14, Quận 3, TP. Hồ Chí Minh</p>
-                                    <p class="mb-2">252 Nguyễn Thị Thập, Phường Tân Quy, Quận 7, TP. Hồ Chí Minh</p>
-                                    <p class="mb-0">8 Nguyễn Gia Trí, Phường 25, Quận Bình Thạnh, TP. Hồ Chí Minh</p>
+                                    <p class="mb-2">Trụ sở chính: 224/60 đường Dương Đình Hội, Phường Tăng Nhơn Phú, TP.
+                                        Hồ Chí Minh</p>
                                 </div>
                             </div>
                         </div>
@@ -186,8 +184,8 @@
                                 <div class="text-white">
                                     <h6 class="fw-bold mb-3">Nơi mùi hương làm bạn đồng hành</h6>
                                     <p class="small mb-3">GỌI ĐẶT MUA:</p>
-                                    <a href="tel:19000129" class="btn btn-light btn-sm">
-                                        <i class="fas fa-phone me-1"></i>1900 0129
+                                    <a href="tel:0965765346" class="btn btn-light btn-sm">
+                                        <i class="fas fa-phone me-1"></i>0965 765 346
                                     </a>
                                     <p class="small mt-2 mb-0">(9:00 - 21:00)</p>
                                 </div>
@@ -363,7 +361,8 @@
                                                     </div>
                                                     <div>
                                                         <h6 class="fw-bold mb-1">Hotline</h6>
-                                                        <p class="text-muted small mb-0">Gọi 1900 0129 để kiểm tra slot
+                                                        <p class="text-muted small mb-0">Gọi 0965 765 346 để kiểm tra
+                                                            slot
                                                         </p>
                                                     </div>
                                                 </div>
@@ -626,7 +625,7 @@
                                                 <i class="fas fa-phone fa-2x text-success mb-3"></i>
                                                 <h6 class="fw-bold">Hotline 24/7</h6>
                                                 <p class="small text-muted mb-3">Gọi ngay để được tư vấn miễn phí</p>
-                                                <a href="tel:19000129" class="btn btn-success btn-sm">1900 0129</a>
+                                                <a href="tel:0965765346" class="btn btn-success btn-sm">0965 765 346</a>
                                             </div>
                                         </div>
                                     </div>
@@ -646,7 +645,7 @@
                                                 <i class="fas fa-envelope fa-2x text-info mb-3"></i>
                                                 <h6 class="fw-bold">Email hỗ trợ</h6>
                                                 <p class="small text-muted mb-3">Gửi câu hỏi chi tiết qua email</p>
-                                                <a href="mailto:support@irisbeauty.vn" class="btn btn-info btn-sm">Gửi
+                                                <a href="mailto:irisle.beauty@gmail.com" class="btn btn-info btn-sm">Gửi
                                                     email</a>
                                             </div>
                                         </div>
@@ -674,8 +673,8 @@
                             <p class="mb-4">Đội ngũ chuyên gia của chúng tôi luôn sẵn sàng giải đáp mọi câu hỏi của bạn
                             </p>
                             <div class="d-flex flex-column flex-md-row gap-3 justify-content-center">
-                                <a href="tel:19000129" class="btn btn-light btn-lg px-4">
-                                    <i class="fas fa-phone me-2"></i>Gọi Ngày: 1900 0129
+                                <a href="tel:0965765346" class="btn btn-light btn-lg px-4">
+                                    <i class="fas fa-phone me-2"></i>Gọi Ngay: 0965 765 346
                                 </a>
                                 <a href="#newsletter-section" class="btn btn-outline-light btn-lg px-4">
                                     <i class="fas fa-comments me-2"></i>Chat Tư Vấn
@@ -795,12 +794,13 @@
                 <div class="col-lg-3 col-md-6 mb-4">
                     <h6 class="fw-bold mb-3">Thông tin liên hệ</h6>
                     <div class="small">
-                        <p class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> 224/60 đường Dương Đình Hội, Phường
+                        <p class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> Trụ sở chính: 224/60 đường Dương Đình
+                            Hội, Phường
                             Tăng Nhơn Phú, TP. Hồ Chí Minh</p>
                         <p class="mb-2"><i class="fas fa-phone me-2"></i> <a href="tel:0965765346"
                                 class="text-decoration-none text-dark">0965765346</a></p>
-                        <p class="mb-2"><i class="fas fa-envelope me-2"></i> <a href="mailto:contact@irisbeauty.vn"
-                                class="text-decoration-none text-dark">contact@irisbeauty.vn</a></p>
+                        <p class="mb-2"><i class="fas fa-envelope me-2"></i> <a href="mailto:irisle.beauty@gmail.com"
+                                class="text-decoration-none text-dark">irisle.beauty@gmail.com</a></p>
                         <p class="mb-0"><i class="fas fa-clock me-2"></i> Mở cửa: 9:00 - 21:00 (Thứ 2 - CN)</p>
                     </div>
                 </div>
@@ -867,7 +867,7 @@
     <!-- Floating Contact Buttons -->
     <div class="floating-contacts">
         <!-- Phone Button -->
-        <a href="tel:0388178062" class="floating-btn phone-btn" title="Gọi ngay: 0388178062">
+        <a href="tel:0965765346" class="floating-btn phone-btn" title="Gọi ngay: 0965765346">
             <i class="fas fa-phone"></i>
         </a>
         <!-- Facebook Button -->
