--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </p>
                     <div class="d-flex flex-column flex-md-row gap-3">
                         <a href="#newsletter" class="btn btn-primary btn-lg">🏥 Đặt lịch tư vấn ngay</a>
-                        <a href="#about" class="btn btn-outline-light btn-lg">📞 Hotline: 0388178062</a>
+                        <a href="#about" class="btn btn-outline-light btn-lg">📞 Hotline: 0965765346</a>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -586,10 +586,11 @@
                         chuyên nghiệp.</p>
                     <p class="small">
                         <i class="fas fa-id-card me-2"></i> <strong>Mã số ĐKKD:</strong> 068197003989<br>
-                        <i class="fas fa-map-marker-alt me-2"></i> <strong>Địa chỉ:</strong> 224/60 đường Dương Đình
+                        <i class="fas fa-map-marker-alt me-2"></i> <strong>Địa chỉ:</strong> Trụ sở chính: 224/60 đường
+                        Dương Đình
                         Hội, Phường Tăng Nhơn Phú, TP. Hồ Chí Minh<br>
                         <i class="fas fa-phone me-2"></i> <strong>Điện thoại:</strong> 0965765346<br>
-                        <i class="fas fa-envelope me-2"></i> <strong>Email:</strong> contact@irisbeauty.vn<br>
+                        <i class="fas fa-envelope me-2"></i> <strong>Email:</strong> irisle.beauty@gmail.com<br>
                         <i class="fas fa-clock me-2"></i> <strong>Giờ làm việc:</strong> 8:30 - 19:30 hằng ngày
                     </p>
                     <div class="social-links mt-3">
@@ -641,7 +642,7 @@
     <!-- Floating Contact Buttons -->
     <div class="floating-contacts">
         <!-- Phone Button -->
-        <a href="tel:0388178062" class="floating-btn phone-btn" title="Gọi ngay: 0388178062">
+        <a href="tel:0965765346" class="floating-btn phone-btn" title="Gọi ngay: 0965765346">
             <i class="fas fa-phone"></i>
         </a>
         <!-- Facebook Button -->
