fix span white-space: normal;

--- a/detailsp.html
+++ b/detailsp.html
@@ -126,7 +126,7 @@
                         <div class="product-info">
                             <!-- Brand -->
                             <div class="mb-2">
-                                <span class="badge bg-light text-dark">${item.name} by ${item.brand}</span>
+                                <span style="white-space: normal;" class="badge bg-light text-dark">${item.name} by ${item.brand}</span>
                             </div>
 
                             <!-- Product Title -->
@@ -246,12 +246,6 @@
                         <button class="nav-link active" id="description-tab" data-bs-toggle="pill"
                             data-bs-target="#description" type="button" role="tab">
                             Mô tả sản phẩm
-                        </button>
-                    </li>
-                    <li class="nav-item" role="presentation">
-                        <button class="nav-link" id="specifications-tab" data-bs-toggle="pill"
-                            data-bs-target="#specifications" type="button" role="tab">
-                            Thành phần & Công dụng
                         </button>
                     </li>
                     <li class="nav-item" role="presentation">
